--- a/src/app/common/layout/sidebar/navigation.component.ng.scss
+++ b/src/app/common/layout/sidebar/navigation.component.ng.scss
@@ -34,42 +34,6 @@
     }
   }
 
-  &.m-sidebarNavigation--nav2021Feature {
-    display: block;
-    position: relative;
-
-    .m-sidebarNavigation {
-      overflow: visible;
-
-      &:not(.m-sidebarNavigation--slide) {
-        .m-sidebarNavigation__list {
-          padding-top: 26px;
-        }
-      }
-
-      nav {
-        overflow-y: auto;
-        max-height: calc(100vh - 75px);
-        &::-webkit-scrollbar {
-          display: none;
-        }
-
-        @media screen and (max-width: $max-mobile) {
-          max-height: 100vh;
-        }
-
-        ::ng-deep m-sidebarMore__trigger {
-          display: block;
-          margin-bottom: 200px;
-
-          ::ng-deep popper-content {
-            position: static;
-          }
-        }
-      }
-    }
-  }
-
   .m-sidebarNavigation {
     @include z-index(sidebar);
     min-width: 0;
@@ -117,6 +81,10 @@
       border-right: 0;
 
       transition: transform 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
+
+      @include m-theme() {
+        box-shadow: 0 0 10px rgba(themed($m-black-always), 0.1);
+      }
 
       .m-sidebarNavigation__top {
         display: flex;
@@ -172,6 +140,12 @@
       list-style: none;
       padding: 0;
       margin: 0;
+    }
+  }
+
+  .m-sidebarNavigation__overlay {
+    @include m-theme() {
+      background-color: rgba(themed($m-black-always), 0.4);
     }
   }
 }
@@ -378,5 +352,129 @@
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
+  }
+}
+
+////////////////////////////////////////////////
+// NAV 2021 FEATURE ////////////////////////////
+////////////////////////////////////////////////
+
+:host {
+  &.m-sidebarNavigation--nav2021Feature {
+    display: block;
+    position: relative;
+    @include z-index(sidebar--mobile);
+
+    .m-sidebarNavigation {
+      overflow: visible;
+
+      @include m-theme() {
+        border-right: 1px solid transparent;
+      }
+
+      &:not(.m-sidebarNavigation--slide) {
+        @include m-theme() {
+          border-right: 1px solid themed($m-borderColor--primary);
+        }
+      }
+
+      .m-sidebarNavigation__list {
+        padding-top: 34px !important;
+      }
+
+      nav {
+        overflow-y: auto;
+        max-height: calc(100vh - 75px);
+        &::-webkit-scrollbar {
+          display: none;
+        }
+
+        @media screen and (max-width: $max-mobile) {
+          max-height: 100vh;
+        }
+
+        ::ng-deep m-sidebarMore__trigger {
+          display: block;
+          margin-bottom: 200px;
+
+          ::ng-deep popper-content {
+            position: static;
+          }
+        }
+      }
+
+      ::ng-deep m-sidebarMore__trigger {
+        .m-sidebarNavigation__item {
+          margin-bottom: 0 !important;
+        }
+      }
+
+      .m-sidebarNavigation__item {
+        margin-bottom: 10px;
+
+        &.m-sidebarNavigation__item--compose {
+          margin-bottom: 20px !important;
+        }
+
+        a {
+          padding: 0;
+          font-size: 19px;
+          height: 35px;
+          min-width: 35px;
+          line-height: 24px;
+          @media screen and (max-width: $layoutMax3ColWidth) {
+            padding: 0;
+          }
+        }
+
+        &.m-sidebarNavigation__item--user img {
+          width: 35px;
+          height: 35px;
+        }
+      }
+
+      .m-sidebarNavigationItem__text {
+        margin-left: 20px;
+      }
+
+      ::ng-deep m-tooltip {
+        width: 35px;
+        height: 35px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        @media screen and (max-width: $layoutMax3ColWidth) {
+          width: 35px !important;
+          min-width: 35px !important;
+
+          text-align: center;
+
+          .m-sidebarNavigation--slide & {
+            width: 35px !important;
+            min-width: 35px !important;
+            text-align: initial;
+          }
+        }
+        i.material-icons,
+        i.m-icon--hashtag,
+        svg,
+        img,
+        ::ng-deep m-icon i {
+          font-size: 21px;
+          width: 20px;
+        }
+
+        i.m-icon--more {
+          font-size: 24px;
+        }
+
+        .m-icon--hashtag {
+          font-style: normal;
+          font-weight: bold;
+          text-align: center;
+          display: inline-block;
+        }
+      }
+    }
   }
 }
