--- a/src/app/common/layout/sidebar/navigation.component.html
+++ b/src/app/common/layout/sidebar/navigation.component.html
@@ -397,7 +397,7 @@
       <ng-container *ngIf="user">
         <li
           *mIfFeature="'matrix'"
-          class="m-sidebarNavigation__item"
+          class="m-sidebarNavigation__item m-sidebarNavigation__item--groups"
           [routerLinkActive]="'m-sidebarNavigation__item--active'"
           [routerLinkActiveOptions]="{ exact: true }"
         >
