--- a/src/app/common/components/sidebar-widget/sidebar-widget.component.html
+++ b/src/app/common/components/sidebar-widget/sidebar-widget.component.html
@@ -1,5 +1,8 @@
 <div class="m-sidebarWidget">
-  <h2 class="m-sidebarWidget__title">{{ title }}</h2>
+  <ng-container [ngSwitch]="headerLevel">
+    <h1 *ngSwitchCase="1" class="m-sidebarWidget__title">{{ title }}</h1>
+    <h2 *ngSwitchDefault class="m-sidebarWidget__title">{{ title }}</h2>
+  </ng-container>
 
   <div
     class="m-sidebarWidget__dismiss"
