--- a/src/app/modules/discovery/disclaimer/disclaimer.component.html
+++ b/src/app/modules/discovery/disclaimer/disclaimer.component.html
@@ -1,18 +1,80 @@
 <m-sidebarWidget
-  title="Minds is a neutral public platform"
+  title="The Community-Owned Social Network"
   dismissibleId="discovery-disclaimer-2020"
+  headerLevel="1"
 >
   <div class="m-sidebarWidget__body">
-    <p
-      class="m-discoveryDisclaimer__text"
-      i18n="@@DISCOVERY_DISCLAIMER__OUR_APPROACH_INFORMATION"
-    >
-      Our
-      <a href="https://change.minds.com" target="_blank">research-based</a>
-      approach in handling misinformation and other types of controversial
-      lawful content is to facilitate civil discourse through free speech, which
-      is the only way to change someone’s mind. It is your choice to engage with
-      someone, keep scrolling, report or block.
-    </p>
+    <ul class="m-discoveryDisclaimer__list">
+      <li class="m-discoveryDisclaimer__listItem">
+        <a
+          href="https://www.minds.com/content-policy"
+          target="_blank"
+          i18n="@@DISCOVERY_DISCLAIMER__SPEAK_YOUR_MIND"
+          data-ref="discovery-disclaimer-speak-your-mind"
+        >
+          Speak your mind
+        </a>
+      </li>
+      <li class="m-discoveryDisclaimer__listItem">
+        <a
+          href="https://www.minds.com/boost"
+          target="_blank"
+          i18n="@@DISCOVERY_DISCLAIMER__EXPAND_YOUR_AUDIENCE"
+          data-ref="discovery-disclaimer-expand-your-audience"
+        >
+          Expand your audience
+        </a>
+      </li>
+      <li class="m-discoveryDisclaimer__listItem">
+        <a
+          href="https://chat.minds.com/"
+          target="_blank"
+          i18n="@@DISCOVERY_DISCLAIMER__CHAT_WITH_FRIENDS"
+          data-ref="discovery-disclaimer-chat-with-friends"
+        >
+          Chat privately with friends
+        </a>
+      </li>
+      <li class="m-discoveryDisclaimer__listItem">
+        <a
+          href="https://change.minds.com/"
+          target="_blank"
+          i18n="@@DISCOVERY_DISCLAIMER__ENGAGE_DIVERSE_OPINIONS"
+          data-ref="discovery-disclaimer-engage-diverse-opinions"
+        >
+          Engage with diverse opinions
+        </a>
+      </li>
+      <li class="m-discoveryDisclaimer__listItem">
+        <a
+          href="https://www.minds.com/upgrades"
+          target="_blank"
+          i18n="@@DISCOVERY_DISCLAIMER__MAKE_MONEY"
+          data-ref="discovery-disclaimer-make-money"
+        >
+          Make money
+        </a>
+      </li>
+      <li class="m-discoveryDisclaimer__listItem">
+        <a
+          href="https://www.minds.com/token"
+          target="_blank"
+          i18n="@@DISCOVERY_DISCLAIMER__EARN_CRYPTO_REWARDS"
+          data-ref="discovery-disclaimer-earn-crypto-rewards"
+        >
+          Earn crypto rewards
+        </a>
+      </li>
+      <li class="m-discoveryDisclaimer__listItem">
+        <a
+          href="https://developers.minds.com/"
+          target="_blank"
+          i18n="@@DISCOVERY_DISCLAIMER__OPEN_SOURCE_DECENTRALIZED"
+          data-ref="discovery-disclaimer-open-source-decentralized"
+        >
+          Open source & decentralized
+        </a>
+      </li>
+    </ul>
   </div>
 </m-sidebarWidget>
