--- a/src/app/common/components/join-banner/join-banner.component.ng.scss
+++ b/src/app/common/components/join-banner/join-banner.component.ng.scss
@@ -11,7 +11,7 @@
     flex-flow: column nowrap;
     justify-content: center;
 
-    @include z-index(announcement);
+    @include z-index(toast);
 
     @include m-theme() {
       background-color: themed($m-bgColor--primaryInverted);
