Truncate channel descriptions to prevent crash

--- a/src/app/common/components/publisher-card/publisher-card.component.html
+++ b/src/app/common/components/publisher-card/publisher-card.component.html
@@ -112,7 +112,7 @@
       m-read-more
       maxHeightAllowed="52"
     >
-      <p [innerHtml]="publisher.briefdescription | tags">
+      <p [innerHtml]="publisher.briefdescription | slice: 0:5000 | tags">
         {{ publisher.briefdescription }}
       </p>
       <m-read-more--button
