--- a/src/app/modules/channels/v2/about/brief.component.html
+++ b/src/app/modules/channels/v2/about/brief.component.html
@@ -3,7 +3,7 @@
     <div class="m-channelAboutBrief__bio" m-read-more [maxHeightAllowed]="200">
       <div
         class="m-channelAboutBriefBio__content"
-        [innerHtml]="channel.briefdescription | tags"
+        [innerHtml]="channel.briefdescription | slice: 0:5000 | tags"
         data-cy="data-minds-channel-bio"
       ></div>
 
