Truncate channel description to prevent recursion crash

--- a/src/app/modules/channels/v2/about/about.component.html
+++ b/src/app/modules/channels/v2/about/about.component.html
@@ -16,7 +16,7 @@
             m-channelAboutField__content
             m-channelAboutField__content--preserveBlanks
           "
-          [innerHtml]="channel.briefdescription | tags"
+          [innerHtml]="channel.briefdescription | slice: 0:5000 | tags"
         ></div>
       </div>
 
