--- a/src/app/modules/discovery/disclaimer/disclaimer.component.ng.scss
+++ b/src/app/modules/discovery/disclaimer/disclaimer.component.ng.scss
@@ -2,42 +2,85 @@
 @import '../../../common/layout/layout.scss';
 
 :host {
-  .m-discoveryDisclaimer__list {
-    padding-inline-start: 20px;
-    margin-block-start: 0;
-    margin-block-end: 0;
+  ::ng-deep .m-sidebarWidget__title {
+    margin-bottom: 5px;
+    font-size: 17px;
+    padding-right: 50px;
+    padding-top: 15px;
+    font-weight: 700;
+  }
 
-    .m-discoveryDisclaimer__listItem {
+  ::ng-deep .m-sidebarWidget__dismiss {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+
+    i {
+      font-size: 22px;
+
       @include m-theme() {
         color: themed($m-textColor--secondary);
       }
 
-      a {
-        text-decoration: underline;
-        font-weight: initial;
+      &:hover {
         @include m-theme() {
-          color: themed($m-link);
+          color: themed($m-textColor--primary);
         }
       }
     }
   }
 
-  .m-discovery__disclaimer--popover m-sidebarWidget {
-    display: none;
+  .m-sidebarWidget__body {
+    padding-top: 15px;
 
-    @media screen and (max-width: $layoutMin3ColWidth) {
-      display: block;
-      position: fixed;
-      bottom: 20px;
-      left: 20vw;
-      right: 20vw;
-      @include z-index(toast);
-      box-shadow: 0 $m-boxShadowOffset $m-boxShadowBlur rgba(0, 0, 0, 0.05);
+    @include m-theme() {
+      border-top: 1px solid themed($m-borderColor--primary);
     }
 
-    @media screen and (max-width: $layoutMax2ColFixedWidth) {
-      left: 20px;
-      right: 20px;
+    .m-discoveryDisclaimer__list {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+      line-height: 2.1;
+
+      .m-discoveryDisclaimer__listItem {
+        @include m-theme() {
+          color: themed($m-textColor--secondary);
+        }
+
+        a {
+          text-decoration: none;
+          font-weight: 400;
+
+          &:hover {
+            font-weight: 500;
+            text-decoration: underline;
+
+            @include m-theme() {
+              color: themed($m-textColor--primary);
+            }
+          }
+        }
+      }
+    }
+
+    .m-discovery__disclaimer--popover m-sidebarWidget {
+      display: none;
+
+      @media screen and (max-width: $layoutMin3ColWidth) {
+        display: block;
+        position: fixed;
+        bottom: 20px;
+        left: 20vw;
+        right: 20vw;
+        @include z-index(toast);
+        box-shadow: 0 $m-boxShadowOffset $m-boxShadowBlur rgba(0, 0, 0, 0.05);
+      }
+
+      @media screen and (max-width: $layoutMax2ColFixedWidth) {
+        left: 20px;
+        right: 20px;
+      }
     }
   }
 }
