--- a/src/app/modules/wallet/components/tokens/polygon/polygon.component.html
+++ b/src/app/modules/wallet/components/tokens/polygon/polygon.component.html
@@ -1,42 +1,66 @@
-<m-loadingSpinner [inProgress]="inProgress"></m-loadingSpinner>
-<div class="m-skale__body" *ngIf="!inProgress">
-  <h6>
-    POLYGON Bridge
-  </h6>
-
-  <div class="m-skale__tokenConverter" [formGroup]="form">
-    <div class="m-skale__inputAmountContainer">
-      <span>{{ inputCurrency }}</span>
-      <input
-        type="number"
-        class="m-input"
-        [(ngModel)]="amount"
-        placeholder="Enter amount"
-        formControlName="amount"
-      />
-      <div>
-        Available: {{ (balance?.amount | number) ?? '0'}} {{ balance.currency }}
-      </div>
-      <div>Allowance: {{ allowance | number }} {{ inputCurrency }}</div>
-    </div>
-    <span
-      class="material-icons m-skale__swapButton"
-      (click)="swapCurrencyFields()"
-    >
-      swap_vert
-    </span>
-    <div class="m-skale__outputAmount">{{ amount }} {{ ouputCurrency }}</div>
-    <div class="m-skale__buttonContainer">
-      <m-button color="primary" (onAction)="approve()" [disabled]="amount === 0"
-        >Approve</m-button
-      >
-      <m-button color="primary" (onAction)="deposit()" [disabled]="amount === 0"
-        >Deposit</m-button
-      >
-    </div>
+<div class="m-skale__body">
+  <div class="m-polygon__tabs">
+    <div class="m-polygon__tab m-polygon__active"><span>Bridge</span></div>
+    <div class="m-polygon__tab"><span>History</span></div>
   </div>
 
-  <!-- <m-wallet__skaleCommunityPool
-    *ngIf="inputCurrency === 'MINDS'"
-  ></m-wallet__skaleCommunityPool> -->
+  <div class="m-polygon__tokenConverter" [formGroup]="form">
+    <span class="m-polygon__boxTitle">From</span>
+    <div class="m-polygon__inputAmountContainer">
+      <div class="m-polygon__row">
+        <img
+          src="assets/ext/ethereum.png"
+          alt="polygon"
+          class="m-polygon__chainLogo"
+        />
+        Mainnet chain
+        <div class="m-polygon__grow"></div>
+        <span class="m-polygon__balance-placeholder">Balance: </span>
+        <span class="m-polygon__balance">
+          {{ (balance.root | number) ?? '0'}} MINDS
+        </span>
+      </div>
+      <div class="m-polygon__input-container">
+        <input
+          type="text"
+          class="m-polygon__input"
+          placeholder="Enter amount"
+          formControlName="amount"
+          [(ngModel)]="amount"
+        />
+
+        <div class="m-polygon__max-button" (click)="setMaxAmount()">MAX</div>
+      </div>
+    </div>
+    <span class="material-icons m-skale__swapButton" (click)="swapNetworks()">
+      swap_vert
+    </span>
+
+    <span class="m-polygon__boxTitle">To</span>
+    <div class="m-polygon__inputAmountContainer">
+      <div class="m-polygon__row">
+        <img
+          src="assets/ext/polygon.png"
+          alt="polygon"
+          class="m-polygon__chainLogo"
+        />
+        Polygon chain
+        <div class="m-polygon__grow"></div>
+        <span class="m-polygon__balance-placeholder">Balance: </span>
+        <span class="m-polygon__balance">
+          {{ (balance.child | number) ?? '0'}} MINDS
+        </span>
+      </div>
+    </div>
+
+    <div class="m-polygon__button-container">
+      <m-button
+        color="primary"
+        (onAction)="withdraw()"
+        [disabled]="amount.length && amount !== '0'"
+      >
+        Transfer
+      </m-button>
+    </div>
+  </div>
 </div>
