--- a/src/app/common/layout/sidebar-more/sidebar-more.component.html
+++ b/src/app/common/layout/sidebar-more/sidebar-more.component.html
@@ -77,6 +77,7 @@
         m-dropdownList__item
         m-sidebarMoreDropdown__item m-sidebarMoreDropdown__spacer
       "
+      *ngIf="getCurrentUser()"
     ></li>
     <!--./././././././././././././././././././././././././././././././.-->
     <li
