Remove kicked user from group members list

--- a/src/app/modules/groups/profile/members/members.html
+++ b/src/app/modules/groups/profile/members/members.html
@@ -53,6 +53,7 @@
             *ngIf="session.isLoggedIn() && session.getLoggedInUser().guid != member.guid"
             [group]="group"
             [user]="member"
+            (onKick)="onKick($event)"
           >
           </minds-groups-card-user-actions-button>
         </div>
