Fix escaping in group descriptions #2954

--- a/src/app/modules/groups/profile/profile.html
+++ b/src/app/modules/groups/profile/profile.html
@@ -135,7 +135,8 @@
             <textarea
               name="briefdescription"
               [autoGrow]
-              [(ngModel)]="group.briefdescription"
+              [ngModel]="group.briefdescription | decodeHtmlString"
+              (ngModelChange)="group.briefdescription = $event"
               placeholder="Enter a brief description"
               i18n-placeholder="@@GROUPS__DESCRIPTION_PLACEHOLDER"
               mTextInputAutocomplete
